# ammon-cli

./: .gitignore  CLAUDE.md  COMANDOS.md  README.md  pyproject.toml
src/ammon/: __init__.py  api.py  cli.py  db.py  downloader.py  monitor.py
src/ammon_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
