[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ammon-cli"
version = "0.1.0"
description = "Apple Music Monitor — track artists and download new releases via OrpheusDL"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
ammon = "ammon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
